# learning-computer-graphics

./: .gitignore  CMakeLists.txt  README.md
assignments/1/: main.cpp  main.cpp.bak
assignments/2/: CMakeLists.txt  main.cpp  rasterizer.cpp
assignments/3/: CMakeLists.txt
assignments/6/: CMakeLists.txt
assignments/7/: CMakeLists.txt
cmake_modules/: utils.cmake
